--- a/src/lib/i18n/translations/en.json
+++ b/src/lib/i18n/translations/en.json
@@ -6,6 +6,16 @@
       "location": "Select Location",
       "weddingSize": "Wedding Size",
       "month": "Select Month",
+      "duration": "Video Duration",
+      "allLocations": "All Locations",
+      "allMonths": "All Months",
+      "allSizes": "All Sizes",
+      "durations": {
+        "all": "All Durations",
+        "short": "0-5 minutes",
+        "medium": "5-10 minutes",
+        "long": "More than 10 minutes"
+      },
       "sizes": {
         "small": "10-50 guests",
         "medium": "50-100 guests",
